Implement task 6 - fix swag for orders entity
